[gd_scene load_steps=16 format=3 uid="uid://bkc0ln1dm5fpo"]

[ext_resource type="Texture2D" uid="uid://dr5665hkn0oyl" path="res://block.png" id="1_fj7yv"]
[ext_resource type="Script" uid="uid://1a2ejyn6uqhj" path="res://world.gd" id="1_pkg7o"]
[ext_resource type="Texture2D" uid="uid://j8aoauf7xon5" path="res://brick.png" id="2_tlwt5"]
[ext_resource type="PackedScene" uid="uid://chxsfybcdnkks" path="res://player.tscn" id="3_tlwt5"]
[ext_resource type="PackedScene" uid="uid://dr0xu1th5xlcb" path="res://goomba.tscn" id="4_aqk2v"]
[ext_resource type="PackedScene" uid="uid://rgh82lyk6uc" path="res://turtle.tscn" id="5_036b0"]
[ext_resource type="PackedScene" uid="uid://cgqomu02uvoc1" path="res://coin.tscn" id="6_dwbse"]
[ext_resource type="AudioStream" uid="uid://8hsem2stya0t" path="res://ost.mp3" id="8_gbfbk"]
[ext_resource type="Script" uid="uid://chvmkq6q1802f" path="res://ui.gd" id="9_ioo17"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aqk2v"]
texture = ExtResource("1_fj7yv")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_036b0"]
texture = ExtResource("2_tlwt5")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pkg7o"]
texture = ExtResource("1_fj7yv")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_dwbse"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_aqk2v")
sources/1 = SubResource("TileSetAtlasSource_036b0")
sources/2 = SubResource("TileSetAtlasSource_pkg7o")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwbse"]
size = Vector2(1163, 24)

[sub_resource type="Theme" id="Theme_ioo17"]

[node name="world" type="Node2D"]
script = ExtResource("1_pkg7o")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_dwbse")
format = 2
layer_0/tile_data = PackedInt32Array(2555904, 1, 0, 2555905, 1, 0, 2555906, 1, 0, 2555907, 1, 0, 2555908, 1, 0, 2555909, 1, 0, 2555910, 1, 0, 2555911, 1, 0, 2555912, 1, 0, 2555913, 1, 0, 2555914, 1, 0, 2555915, 1, 0, 2555916, 1, 0, 2555917, 1, 0, 2555918, 1, 0, 2555923, 1, 0, 2555924, 1, 0, 2555925, 1, 0, 2555926, 1, 0, 2555927, 1, 0, 2555928, 1, 0, 2555929, 1, 0, 2555930, 1, 0, 2555931, 1, 0, 2555932, 1, 0, 2555933, 1, 0, 2555934, 1, 0, 2555935, 1, 0, 2555936, 1, 0, 2555937, 1, 0, 2555938, 1, 0, 2555939, 1, 0, 2555940, 1, 0, 2555941, 1, 0, 2555942, 1, 0, 2555943, 1, 0, 2555944, 1, 0, 2555945, 1, 0, 2555946, 1, 0, 2555947, 1, 0, 2555948, 1, 0, 2555949, 1, 0, 2555950, 1, 0, 2555956, 1, 0, 2555957, 1, 0, 2555958, 1, 0, 2555959, 1, 0, 2555960, 1, 0, 2555961, 1, 0, 2555962, 1, 0, 2555963, 1, 0, 2555964, 1, 0, 2555965, 1, 0, 2555966, 1, 0, 2555967, 1, 0, 2555968, 1, 0, 2555969, 1, 0, 2555970, 1, 0, 2555971, 1, 0, 2555972, 1, 0, 2555973, 1, 0, 2555974, 1, 0, 2555975, 1, 0, 2621440, 1, 0, 2686976, 1, 0, 2752512, 1, 0, 2818048, 1, 0, 2621441, 1, 0, 2686977, 1, 0, 2752513, 1, 0, 2818049, 1, 0, 2621442, 1, 0, 2686978, 1, 0, 2752514, 1, 0, 2818050, 1, 0, 2621443, 1, 0, 2686979, 1, 0, 2752515, 1, 0, 2818051, 1, 0, 2621444, 1, 0, 2686980, 1, 0, 2752516, 1, 0, 2818052, 1, 0, 2621445, 1, 0, 2686981, 1, 0, 2752517, 1, 0, 2818053, 1, 0, 2621446, 1, 0, 2686982, 1, 0, 2752518, 1, 0, 2818054, 1, 0, 2621447, 1, 0, 2686983, 1, 0, 2752519, 1, 0, 2818055, 1, 0, 2621448, 1, 0, 2686984, 1, 0, 2752520, 1, 0, 2818056, 1, 0, 2621449, 1, 0, 2686985, 1, 0, 2752521, 1, 0, 2818057, 1, 0, 2621450, 1, 0, 2686986, 1, 0, 2752522, 1, 0, 2818058, 1, 0, 2621451, 1, 0, 2686987, 1, 0, 2752523, 1, 0, 2818059, 1, 0, 2621452, 1, 0, 2686988, 1, 0, 2752524, 1, 0, 2818060, 1, 0, 2621453, 1, 0, 2686989, 1, 0, 2752525, 1, 0, 2818061, 1, 0, 2621454, 1, 0, 2686990, 1, 0, 2752526, 1, 0, 2818062, 1, 0, 2621459, 1, 0, 2686995, 1, 0, 2752531, 1, 0, 2818067, 1, 0, 2621460, 1, 0, 2686996, 1, 0, 2752532, 1, 0, 2818068, 1, 0, 2621461, 1, 0, 2686997, 1, 0, 2752533, 1, 0, 2818069, 1, 0, 2621462, 1, 0, 2686998, 1, 0, 2752534, 1, 0, 2818070, 1, 0, 2621463, 1, 0, 2686999, 1, 0, 2752535, 1, 0, 2818071, 1, 0, 2621464, 1, 0, 2687000, 1, 0, 2752536, 1, 0, 2818072, 1, 0, 2621465, 1, 0, 2687001, 1, 0, 2752537, 1, 0, 2818073, 1, 0, 2621466, 1, 0, 2687002, 1, 0, 2752538, 1, 0, 2818074, 1, 0, 2621467, 1, 0, 2687003, 1, 0, 2752539, 1, 0, 2818075, 1, 0, 2621468, 1, 0, 2687004, 1, 0, 2752540, 1, 0, 2818076, 1, 0, 2621469, 1, 0, 2687005, 1, 0, 2752541, 1, 0, 2818077, 1, 0, 2621470, 1, 0, 2687006, 1, 0, 2752542, 1, 0, 2818078, 1, 0, 2621471, 1, 0, 2687007, 1, 0, 2752543, 1, 0, 2818079, 1, 0, 2621472, 1, 0, 2687008, 1, 0, 2752544, 1, 0, 2818080, 1, 0, 2621473, 1, 0, 2687009, 1, 0, 2752545, 1, 0, 2818081, 1, 0, 2621474, 1, 0, 2687010, 1, 0, 2752546, 1, 0, 2818082, 1, 0, 2621475, 1, 0, 2687011, 1, 0, 2752547, 1, 0, 2818083, 1, 0, 2621476, 1, 0, 2687012, 1, 0, 2752548, 1, 0, 2818084, 1, 0, 2621477, 1, 0, 2687013, 1, 0, 2752549, 1, 0, 2818085, 1, 0, 2621478, 1, 0, 2687014, 1, 0, 2752550, 1, 0, 2818086, 1, 0, 2621479, 1, 0, 2687015, 1, 0, 2752551, 1, 0, 2818087, 1, 0, 2621480, 1, 0, 2687016, 1, 0, 2752552, 1, 0, 2818088, 1, 0, 2621481, 1, 0, 2687017, 1, 0, 2752553, 1, 0, 2818089, 1, 0, 2621482, 1, 0, 2687018, 1, 0, 2752554, 1, 0, 2818090, 1, 0, 2621483, 1, 0, 2687019, 1, 0, 2752555, 1, 0, 2818091, 1, 0, 2621484, 1, 0, 2687020, 1, 0, 2752556, 1, 0, 2818092, 1, 0, 2621485, 1, 0, 2687021, 1, 0, 2752557, 1, 0, 2818093, 1, 0, 2621486, 1, 0, 2687022, 1, 0, 2752558, 1, 0, 2818094, 1, 0, 2621492, 1, 0, 2687028, 1, 0, 2752564, 1, 0, 2818100, 1, 0, 2621493, 1, 0, 2687029, 1, 0, 2752565, 1, 0, 2818101, 1, 0, 2621494, 1, 0, 2687030, 1, 0, 2752566, 1, 0, 2818102, 1, 0, 2621495, 1, 0, 2687031, 1, 0, 2752567, 1, 0, 2818103, 1, 0, 2621496, 1, 0, 2687032, 1, 0, 2752568, 1, 0, 2818104, 1, 0, 2621497, 1, 0, 2687033, 1, 0, 2752569, 1, 0, 2818105, 1, 0, 2621498, 1, 0, 2687034, 1, 0, 2752570, 1, 0, 2818106, 1, 0, 2621499, 1, 0, 2687035, 1, 0, 2752571, 1, 0, 2818107, 1, 0, 2621500, 1, 0, 2687036, 1, 0, 2752572, 1, 0, 2818108, 1, 0, 2621501, 1, 0, 2687037, 1, 0, 2752573, 1, 0, 2818109, 1, 0, 2621502, 1, 0, 2687038, 1, 0, 2752574, 1, 0, 2818110, 1, 0, 2621503, 1, 0, 2687039, 1, 0, 2752575, 1, 0, 2818111, 1, 0, 2621504, 1, 0, 2687040, 1, 0, 2752576, 1, 0, 2818112, 1, 0, 2621505, 1, 0, 2687041, 1, 0, 2752577, 1, 0, 2818113, 1, 0, 2621506, 1, 0, 2687042, 1, 0, 2752578, 1, 0, 2818114, 1, 0, 2621507, 1, 0, 2687043, 1, 0, 2752579, 1, 0, 2818115, 1, 0, 2621508, 1, 0, 2687044, 1, 0, 2752580, 1, 0, 2818116, 1, 0, 2621509, 1, 0, 2687045, 1, 0, 2752581, 1, 0, 2818117, 1, 0, 2621510, 1, 0, 2687046, 1, 0, 2752582, 1, 0, 2818118, 1, 0, 2621511, 1, 0, 2687047, 1, 0, 2752583, 1, 0, 2818119, 1, 0, 2097223, 0, 0, 2162759, 0, 0, 2228295, 0, 0, 2293831, 0, 0, 2359367, 0, 0, 2424903, 0, 0, 2490439, 0, 0, 2228236, 0, 0, 2228237, 0, 0, 2228238, 0, 0, 2228239, 0, 0, 2490390, 0, 0, 2490391, 0, 0, 2490392, 0, 0, 2490393, 0, 0, 2490394, 0, 0, 2490395, 0, 0, 2424859, 0, 0, 2359323, 0, 0, 2293787, 0, 0, 2228251, 0, 0, 2162715, 0, 0, 2228250, 0, 0, 2293786, 0, 0, 2359322, 0, 0, 2424858, 0, 0, 2293785, 0, 0, 2359321, 0, 0, 2424857, 0, 0, 2359320, 0, 0, 2424856, 0, 0, 2424855, 0, 0, 2162719, 2, 268435456, 2228255, 0, 0, 2293791, 0, 0, 2359327, 0, 0, 2424863, 0, 0, 2490399, 0, 0, 2228256, 0, 0, 2293792, 0, 0, 2359328, 0, 0, 2424864, 0, 0, 2490400, 0, 0, 2293793, 0, 0, 2359329, 0, 0, 2424865, 0, 0, 2490401, 0, 0, 2359330, 0, 0, 2424866, 0, 0, 2490402, 0, 0, 2424867, 0, 0, 2490403, 0, 0, 2490404, 0, 0, 2228235, 0, 0, 2228234, 0, 0, 2228270, 0, 0, 2228280, 0, 0, 2228281, 0, 0, 2228282, 0, 0, 2228283, 0, 0, 2228284, 0, 0, 2490434, 0, 0, 2424898, 0, 0, 2424899, 0, 0, 2359363, 0, 0, 2359364, 0, 0, 2293828, 0, 0, 2293829, 0, 0, 2228293, 0, 0, 2228294, 0, 0, 2490433, 0, 0, 2162758, 0, 0, 2293830, 0, 0, 2359366, 0, 0, 2424902, 0, 0, 2490438, 0, 0, 2490437, 0, 0, 2424901, 0, 0, 2359365, 0, 0, 2424900, 0, 0, 2490436, 0, 0, 2490435, 0, 0, 2228269, 0, 0, 2228268, 0, 0, 2228267, 0, 0, 2228266, 0, 0, 2490414, 0, 0, 2490420, 0, 0, 2490389, 2, 0, 2424854, 2, 0, 2359319, 2, 0, 2293784, 2, 0, 2228249, 2, 0, 2162714, 2, 0, 2097179, 2, 0, 2097183, 2, 268435456, 2162720, 2, 268435456, 2228257, 2, 268435456, 2293794, 2, 268435456, 2359331, 2, 268435456, 2424868, 2, 268435456, 2490405, 0, 0)

[node name="player" parent="TileMap" instance=ExtResource("3_tlwt5")]
position = Vector2(33, 623)

[node name="Camera2D" type="Camera2D" parent="TileMap/player"]
zoom = Vector2(2.7, 2.7)
limit_left = 0
limit_top = 0
limit_bottom = 650

[node name="goomba" parent="TileMap" instance=ExtResource("4_aqk2v")]
position = Vector2(195, 624)

[node name="goomba2" parent="TileMap" instance=ExtResource("4_aqk2v")]
position = Vector2(674, 624)

[node name="goomba3" parent="TileMap" instance=ExtResource("4_aqk2v")]
position = Vector2(927, 624)

[node name="turtle" parent="." instance=ExtResource("5_036b0")]
position = Vector2(166, 544)

[node name="turtle2" parent="." instance=ExtResource("5_036b0")]
position = Vector2(454, 624)

[node name="turtle3" parent="." instance=ExtResource("5_036b0")]
position = Vector2(742, 544)

[node name="turtle4" parent="." instance=ExtResource("5_036b0")]
position = Vector2(901, 544)

[node name="coin" parent="." instance=ExtResource("6_dwbse")]
position = Vector2(134, 547)

[node name="coin2" parent="." instance=ExtResource("6_dwbse")]
position = Vector2(114, 547)

[node name="coin3" parent="." instance=ExtResource("6_dwbse")]
position = Vector2(95, 547)

[node name="coin4" parent="." instance=ExtResource("6_dwbse")]
position = Vector2(74, 547)

[node name="interact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact"]
position = Vector2(575, 701)
shape = SubResource("RectangleShape2D_dwbse")

[node name="AudioWorld" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gbfbk")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("9_ioo17")

[node name="LivesLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
text = "Lives: 3
"

[node name="GameOverLabel" type="Label" parent="UI"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme = SubResource("Theme_ioo17")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "GAME OVER
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="interact" to="." method="_on_interact_body_entered"]
